--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -6,7 +6,62 @@
   </head>
   <body>
     <%= render 'default/shared/navigation' %>
-    
+
     <%= yield %>
   </body>
+</html>
+
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta content="yes" name="apple-touch-fullscreen" />
+    <meta name="description" content="<%= page.title %>">
+
+    <title><%= page.title %></title>
+
+    <%= favicon_link_tag 'icon.ico'%>
+
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:site_name" content="<%= page.title %>">
+    <meta property="og:title" content="<%= page.title %>">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://gaeastudio.herokuapp.com/">
+    <meta property="og:image" content="https://res.cloudinary.com/mathildanancia/image/upload/v1568704321/Clients/Roel/Capture_d_e%CC%81cran_2019-09-17_a%CC%80_09.11.32_yg8ij6.png">
+    <meta property="og:description" content="...">
+
+
+    <meta name="twitter:title" content="<%= page.title %>">
+    <meta name="twitter:description" content="...">
+
+    <meta name="twitter:image:src" content="https://res.cloudinary.com/mathildanancia/image/upload/v1567851297/samples/Bagnoler/Mathilde/Mathilde_Ganancia_-_Chonce-5189_-_WEB_vdejvc.jpg">
+
+<!-- Mailchimp subscriptions
+ -->
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<!--     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js?ver=1.3.2'></script>
+    <script src="https://cdn.jsdelivr.net/npm/interactjs@1.3.4/dist/interact.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdn.plyr.io/3.4.7/plyr.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script> -->
+
+    <%= stylesheet_link_tag "application", media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag "application", 'data-turbolinks-track': 'reload' %>
+
+  </head>
+
+  <body>
+    <%= yield %>
+  </body>
+
 </html>
