--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -41,7 +41,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script> -->
 
     <%= stylesheet_link_tag "application", media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag "application", 'data-turbolinks-track': 'reload' %>
+    <%#= javascript_pack_tag "application", 'data-turbolinks-track': 'reload' %>
 
   </head>
 
