--- a/app/views/default/pages/homepage.html.erb
+++ b/app/views/default/pages/homepage.html.erb
@@ -139,6 +139,7 @@
     $('main')[0].style.height = '100%';
     sumCont = '0px';
     $('.collapsible').nextAll(".collapsible:first").css({'padding-top' : '0.8em'});
+    $('.collapsible').removeClass('active');
 
     }
   });
